0019 ReplicatorG
New features:
* Undo/Redo
* Support for unicorn toolhead (Thanks to Zeeshan M.)
* Better Mac build (thanks Zaggo)
* ABP build profile support
* MkV extruder build profile support
* Support for new 2.4 extruder features (separate HBP PID settings)
* Fixes longstanding Z-axis move breakout issue; continuous xyz motion
  limiting should work properly now
* Alpha .obj file importer
* Alpha .dae file importer


New features:
* Model can now be manipulated and saved
* Model translation
* Model scaling
* Model rotation
* Model reflection
* Autocentering
* New Windows launcher
* Save model prompt when generating a toolpath
* Tabs indicate object modification status
* Explicit python path preference
* Allow user choice of python installation
Contributions:
* Mikko Sivulainen (paeaetech): better estimation for SD uploads
* Mikko Sivulainen (paeaetech): improved serial selection handling
* GitHub user Nazdravi: basic HTTP proxy support on Linux

0017 ReplicatorG
* New features:
** STL files can now be directly loaded and previewed
** Skeinforge 0006 integrated with some simple profiles; STL files
   can now be sliced from within ReplicatorG
** Build concept now encapsulates a gcode slice and an STL model
** Fixed numerous Mac interface issues
** Multiple profiles in skeinforge 0006 (Charles Pax)
* Bug fixes:
** Better handling for 0-length payloads (Aaron Colwell)
** Fix for Mac build issues (Rick Kimball)

0016 ReplicatorG
* New features:
** Rearranged control panel to better suit machines with small screens
** Added temperature monitoring graph to control panel

0015 ReplicatorG
* Bug fixes:
* * gh-44: "Save As" now works as expected
* * New files now work as expected
* * gh-35: No longer resetting machine at startup
* * gh-33: Removed separate concept of current position from
*   gcode parser
* New features:
* * gh-42: arc resolution is now controllable via preferences
* * gh-40: valve/fan outputs renamable in machines.xml.
* * gh-39: frostruder support.